fixed gap above header on cookie bar removed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,7 +557,7 @@ hr {
 /*Header*/
 .header {
     background: var(--darkpurple);
-    margin-top: 21.2px;
+    margin-top: 20px;
 }
 
 .header_content {
